--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "CC-BY-NC-ND-4.0",
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.10",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
@@ -22,6 +23,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
